second solution/K8s/App/svc.yaml
apiVersion: v1
kind: Service
metadata:
 namespace: widebot-ns
 name: widebot-svc
spec:
 type: NodePort
 selector:
   app: widebot-app
 ports:
 - nodePort: 80
   protocol: TCP
   port: 80
   targetPort: 80
