second solution/K8s/App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: widebot-ns
  name: widebot-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: "*.witebot.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: widebot-scv
                port:
                  number: 80
